# OpenStudioLandscapes-n8n

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  pyproject_layer.yaml
.nox/: .gitkeep  nox-report.json  pylint-report.json  pylint-report.txt
.sbom/: cyclonedx-py.3.11.json  pipdeptree.3.11.dot  pipdeptree.3.11.mermaid
obsidian/Templates/canvas/: Canvas Items.canvas  Canvas.canvas
obsidian/Templates/templater/: Excalidraw (dated).md
src/OpenStudioLandscapes/Template/: constants.py  definitions.py  readme_feature.py
src/OpenStudioLandscapes/Template/config/: models.py
src/OpenStudioLandscapes/n8n/: __init__.py  assets.py  constants.py  definitions.py
src/OpenStudioLandscapes/n8n/config/: models.py
src/OpenStudioLandscapes/n8n/doc/: readme.py
tests/: conftest.py
