[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools-scm>=9",
    "setuptools>=80",
]

[project]
authors = [
    { email = "michimussato@gmail.com", name = "Michael Mussato" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: OpenStudioLandscapes",
    "Programming Language :: Python",
]
dependencies = [
    "OpenStudioLandscapes @ git+https://github.com/michimussato/OpenStudioLandscapes",
    "PyYAML",
    "dagster==1.9.11",
    "docker-compose-graph @ git+https://github.com/michimussato/docker-compose-graph.git",
    "email-validator",
    "gitpython",
    "snakemd",
]
description = "n8n Feature for OpenStudioLandscapes"
dynamic = [
    "version",
]
license-files = [
    "LICENSE.txt",
]
maintainers = [
    { email = "michimussato@gmail.com", name = "Michael Mussato" },
]
name = "OpenStudioLandscapes-n8n"
requires-python = ">=3.11"

[project.entry-points]

[project.optional-dependencies]
coverage = [
    "coverage",
    "pytest",
]
dev = [
    "OpenStudioLandscapes-n8n[coverage]",
    "OpenStudioLandscapes-n8n[lint]",
    "OpenStudioLandscapes-n8n[nox]",
    "OpenStudioLandscapes-n8n[readme]",
    "OpenStudioLandscapes-n8n[sbom]",
    "OpenStudioLandscapes-n8n[testing]",
]
graphviz = [
    "graphviz",
    "pipdeptree",
]
lint = [
    "black",
    "isort",
    "pre-commit",
    "pylint",
]
nox = [
    "OpenStudioLandscapes-n8n[testing]",
    "nox",
]
pyproject = [
    "OpenStudioLandscapesUtil-VersionBumper @ git+https://github.com/michimussato/OpenStudioLandscapesUtil-VersionBumper.git",
]
readme = [
    "OpenStudioLandscapesUtil-ReadmeGenerator @ git+https://github.com/michimussato/OpenStudioLandscapesUtil-ReadmeGenerator.git",
]
sbom = [
    "OpenStudioLandscapes-n8n[graphviz]",
    "cyclonedx-bom",
]
testing = [
    "pytest",
    "pytest-cov",
    "setuptools",
]

[project.readme]
content-type = "text/markdown; charset=UTF-8"
file = "README.md"

[project.urls]
Homepage = "https://github.com/michimussato/OpenStudioLandscapes-n8n"

[tool.dagster]
code_location_name = "OpenStudioLandscapes-n8n"
module_name = "OpenStudioLandscapes.n8n.definitions"

[tool.setuptools]
include-package-data = true
packages = [
    "OpenStudioLandscapes.n8n",
]
platforms = [
    "Linux",
]

[tool.setuptools.package-dir]
"" = "src"
